tests/tooling/fixtures/native/recovery/positive/unary_plus_global_initializer_chain.objc3
module UnaryPlusGlobalInitializerChain;

let base = +5;
let doubled = +(base + base);
let biased = +(doubled + 1);

fn main() -> i32 {
  return biased;
}
