tests/tooling/fixtures/native/recovery/negative/negative_modulo_parser_missing_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeModuloParserMissingRhs;

fn main() -> i32 {
  let x = 1 % ;
  return x;
}